<resources>
    <string name="app_name">Aplikasi Laporan Pantauan Harian Puskesmas Depok Jaya</string>
    <string name="welcome_login">Selamat Datang di Aplikasi\nLaporan Pantauan Harian\nPuskesmas Depok Jaya</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="password">Password</string>
    <string name="masuk">MASUK</string>
    <string name="splash_screen_title">Aplikasi Laporan Pantauan Harian\nPuskesmas Depok Jaya</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_pasien">Dashboard Pasien</string>
    <string name="logo">Logo</string>
    <string name="profile_pasien">Profile Pasien</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="tentang">Tentang</string>
    <string name="demam">Demam</string>
    <string name="radio_ya">Ya</string>
    <string name="radio_tidak">Tidak</string>
    <string name="sesak">Sesak</string>
    <string name="nyeri_tenggorokan">Nyeri Tenggorokan</string>
    <string name="batuk">Batuk</string>
    <string name="pilek">Pilek</string>
    <string name="diare">Diare</string>
    <string name="kirim">Kirim</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string name="nomor_kartu_keluarga">Nomor Kartu Keluarga</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="update_data">Update Data</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="daftar_laporan_harian">Daftar Laporan Harian</string>
    <string name="detail">Detail</string>
    <string name="suhu_tubuh">Suhu Tubuh</string>
    <string name="radio_tidak_tahu">Tidak Tahu</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="deskripsi_about">Aplikasi laporan pemantauan harian dibuat dengan tujuan untuk mendata keadaan harian pasien yang memerlukan pemantauan pada Puskesmas Depok Jaya kota Depok secara real time.</string>
    <string name="laporan_ke">Laporan ke - %1$s</string>

    <string name="suhu">%1$s&#176; C</string>
    <string name="celcius">&#176; C</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="tanggal_laporan">Tanggal Laporan</string>
    <string name="detail_laporan">Detail Laporan</string>
</resources>
