<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dashboard"
                android:textColor="#fff"
                android:textSize="21sp" />


        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/puskesmas_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_atas"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/head"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-400dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableTop="@drawable/icon_profile"
                android:orientation="vertical"
                android:padding="10dp"
                android:text="@string/profile_pasien"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_laporan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_laporan"
                android:orientation="vertical"
                android:padding="10dp"
                android:text="@string/buat_laporan"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_bawah"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/menu_atas"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ganti_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_ganti_password"
                android:orientation="vertical"
                android:padding="10dp"
                android:text="@string/ganti_password"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tentang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#fff"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_tentang"
                android:orientation="vertical"
                android:padding="10dp"
                android:text="@string/tentang"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>